<resources>
    <string name="app_name">Tik-Tak</string>
    <string name="st_Name">Name : H.K.D.Silva</string>
    <string name="iit_id">IIT id : 20200969</string>
    <string name="uow_id">Uow id : w1839723</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="correct">Correct</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="incorrect">Incorrect</string>
    <string name="_10">10</string>
    <string name="_50">50%</string>
    <string name="total">Total :</string>

</resources>